<resources>
    <string name="app_name">Tourismo Bislig</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_world1">Hello world1!</string>
    <string name="online">ONLINE MODE</string>
    <string name="offline">OFFLINE MODE</string>
    <string name="copy"> ©CMJT Turismo Bislig-2014</string>
    <string name="title">G. Android Developers</string>
    <string name="clyde">Clyde Ian Acaso</string>
    <string name="pos1">Team Leader</string>
    <string name="golda">Marigold Partosa</string>
    <string name="pos2">Team Asst. Leader</string>
    <string name="joi">Joie Cosmiano</string>
    <string name="tam">Theresa Mae Suan</string>
    <string name="pos3">Team Members</string>
    <string name="titles">Bislig City</string>
    <string name="sub">Charming City of the East Coast</string>
    <string name="sub1">Tourist Spots</string>
    <string name="sub2">Restaurants</string>
    <string name="sub3">Accomodations</string>
    <string name="str_tv_distance_time">Distance</string>
    <string name="str_rb_driving">Driving/Commuting</string>
    <string name="str_rb_bicycling">BiCycling</string>
    <string name="str_rb_walking">Walking</string>
    <string name="ins">Press the Telephone number below to instantly dial the number</string>
    <string name="police">Police Number</string>
    <string name="policenumber1">\t o Mangagoy Tel. # 166</string>
    <string name="policenumber2">\t o Poblacion Tel. # 167</string>
    <string name="fire">Bureau of Fire</string>
    <string name="firenumber1">\t  o Mangagoy Tel. # 160</string>
    <string name="hospital">Hospitals</string>
    <string name="hospitalnumber1">\t  o Bislig District Hospital Tel. # 169 </string>
    <string name="hospitalnumber2">\t  o ASMH Tel. # (086) 853-3124</string>
    <string name="hospitalnumber3">\t  o RHU-Mangagoy Tel. # (086)853-5338</string>
    <string name="hospitalnumber4">\t  o RHU-Poblacion Tel. # (086) 853-4398</string>
    <string name="hospitalnumber5">\t  o St. Vicent Tel. # (086) 853-1365</string>
    <string name="baywalk">Bislig City Baywalk</string>
    <string name="tinuyan">Tinuy-an Falls</string>
    <string name="hinayagan">Hinayagan Cave</string>
    <string name="ovp">Ocean View Park and International Doll House</string>
    <string name="hagonoy">Hagonoy Island</string>
    <string name="florland">Florland Resort</string>
    <string name="tfanny">Tfannys Cuisine</string>
    <string name="highland">Highland Function Farm</string>
    <string name="mydung">My Dung</string>
    <string name="gails">Gails Resto and Coffee Shoppe</string>
    <string name="babano">Casa de Babano Resto</string>
    <string name="bianos">Biaños Pizzaderia</string>
    <string name="jmstar">Jm Star Food Hauz</string>
    <string name="dansgrill">Dans Grill</string>
    <string name="chickeninato">Chicken Inato</string>
    <string name="ovpres">Ocean View Park Restaurant</string>
    <string name="bunso">Kan-anan ni Bunso</string>
    <string name="yoyoys">Yoyoys Grill</string>
    <string name="pci">Paper Country Inn</string>
    <string name="shielas">Shielas Pension House</string>
    <string name="pls">Pensionne La Salle</string>
    <string name="casa">Casa de Babano</string>
    <string name="tfannysinn">Tfannys Inn</string>
    <string name="sleep">Sleep Inn</string>
    <string name="yolanda">Yolanda Inn</string>
    <string name="violy">Violys Pension House</string>
    <string name="st">St Francis Pension House</string>
    <string name="description">Description</string>
    <string name="button">Map Location</string>
    <string name="history">Overview</string>
    <string name="resources">Natural Resources</string>
    <string name="festival">Festivals and Culture</string>
    <string name="more">External Links - For More Info</string>
    <string name="btns">Visit Bislig City Official Website</string>
    <string name="add1">National Highway Coastal Road</string>
    <string name="trans">Transportation/Fees as of 2014</string>
    <string name="tricycle">Tricycle - 12 pesos</string>
    <string name="jeep">Jeepney - 12 pesos</string>
    <string name="tricycle1">Tricycle</string>
    <string name="tricyclesub">Common Tranportation within the City</string>
    <string name="tricyclebtn">Map To - Tricycle Terminal</string>
    <string name="jeep1">Jeepney</string>
    <string name="jeepsub">Common Transportation for Distant Places</string>
    <string name="jeepbtn">Map To - Jeepney Integrated Terminal</string>
    <string name="habal">Habal-Habal / Skylab</string>
    <string name="habalsub">Another Alternative Tranportation for Distant Places</string>
    <string name="habalbtn">Map To - Habal-Habal Lounge </string>
    <string name="bus">Bislig City Integrated Bus Terminal</string>
    <string name="bussub">Transportation in Travelling another City</string>
    <string name="busbtn">Map To - Phoenix Bus Terminal </string>
    <string name="fee">Transportation Fee - As of 2014 </string>
    <string name="fee1">Fare: The following tariff is for local places in Bislig City. The Tariff can be change depending on the place you want to go. </string>
    <string name="fee4">Fare: The following tariff is the Regular and Minimum fare of the Passengers. It can be change depending on the place where you want to go at. </string>
    <string name="fee2">\t • Regular – 8 pesos </string>
    <string name="fee3">\t • Student – 6 pesos </string>
    <string name="pass">\t • Maximum of 8 passenger </string>
    <string name="fee5">\t • Regular – 20 pesos </string>
    <string name="fee6">\t • Student – 17 pesos </string>
    <string name="pass1">\t • Maximum of 18 passenger </string>
    <string name="fee7">Fare: The following tariff is the Regular fare of the Passengers. It can be change depending on the place where you want to go at. For this transportation, the fare can be negotiable depending on what you and the drivers agreement. </string>
    <string name="fee8">\t • Regular – 60 pesos per head </string>
    <string name="pass2">\t • Maximum of 6 passenger </string>
    <string name="sikad">Trisikad / Sikad </string>
    <string name="sikad2">A Human Powered type of transportation in the City </string>
    <string name="sikad3">Fare: This is the current tariff in Sikad. </string>
    <string name="sikad4">\t • Regular – 7 pesos </string>
    <string name="sikad5">\t • Student – 5 pesos </string>
    <string name="sikad6">\t • Maximum of 3 passenger </string>
    <string name="tinuyansub">Borboanan, Bislig City</string>
    <string name="habal2">Habal Habal - 200 pesos Per Head (Negotiable)</string>
    <string name="jeep2">Jeepney - 50 pesos but only in Brgy. Borboanan</string>
    <string name="ovpsub">Purok 6, Barangay Cumawas, Bislig City</string>
    <string name="ovptri">Tricycle - 10 pesos</string>
    <string name="ovpjeep">Jeepney - 10 pesos</string>
    <string name="ovpfee1">Entrance Fee</string>
    <string name="ovpfee2">\t • Adult - P20.00</string>
    <string name="ovpfee3">\t • Youth - P12.00</string>
    <string name="ovpfee4">\t • Child - P5.00</string>
    <string name="hinayagansub">Kapatagan 2, San Vicente, Bislig City</string>
    <string name="hinayaganjeep">Jeepney - 50 only in Barangay San Vicente</string>
    <string name="tinuyanfee1">Entrance Fee</string>
    <string name="tinuyanfee2">\t • Adult - 50 per Head</string>
    <string name="tinuyanfee3">\t • Youth - 40 per Head</string>
    <string name="tinuyanfee4">\t • Children - Free</string>
    <string name="bangka">Bangka</string>
    <string name="bangkasub">A big boat used in Fishing and Hopping Islands</string>
    <string name="bangkabtn">Map to - Local Sea Port</string>
    <string name="bangkafees">In Riding Bangka the fare depends on what destination you want to. For trip to hagonoy island they have set a price. Although you can negotiate  the price of the fare depending on the boat driver.</string>
    <string name="bangkafees1">\t • Fare - 1,500 pesos good for 20 people Roundtrip</string>
    <string name="bangkafees2">\t • Fare - 1,000 pesos good for 10 people Roundtrip</string>
    <string name="hagonoysub">Bislig bay, Bislig City</string>
    <string name="hagonoynote">Note:</string>
    <string name="hagonoynote1">The Map Location Button Shows the Map Location of the Hagonoy Island and the Route it projects is the Driving Route for Hagonoy. There are other Alternatives upon reaching the island Please kindly refer to the Transportation and Fees Section of this page.</string>
    <string name="hagonoybtntext">Bangka - 1,500 for 20 people,roundtrip</string>
    <string name="hagonoyfee1">\t • 50 pesos per Person</string>
    <string name="hagonoyfee2">\t • cottage rental P100 (small) </string>
    <string name="hagonoyfee3">\t • cottage rental P200 (large) </string>
    <string name="hagonoyfee4">\t • Parking for pumpboat 60 pesos</string>
    <string name="florlandsub">San Vincente 1 , Bislig City</string>
    <string name="florlandfee1">\t • 50 pesos Adult</string>
    <string name="florlandfee2">\t • 25 pesos Youth/Children</string>
    <string name="florlandhabal">70 pesos per head habal-habal (Direct)</string>
    <string name="florlandjeep">50 pesos Jeepney Only on Barangay San Vicente</string>
    <string name="florlandacc">Overnight Stay / Hotel </string>
    <string name="florlandacc1">\t 4 twinbed, 4 triple beds, 5 quadruple sharing 2 duplex/apartelle P1,000 each</string>
    <string name="florlandacc2">Tap the Number to dial </string>
    <string name="florlandacc3">\t • Tel. (086) 6160-056 </string>
    <string name="ratesandreserve">Resevations and  Room Rates</string>
    <string name="roomrates">Room / Rate Per Room</string>
    <string name="aircon">Aircon Room</string>
    <string name="nonaircon">Non - Aircon Room</string>
    <string name="extrafee">Extra Fee / Other Services</string>
    <string name="shielassub">Espirito St., Mangagoy, Bislig City</string>
    <string name="btnmapshileas">Map to Shielas Pension House</string>
    <string name="shielasroom1">\t • (2) 1 Matrimonial (1 single) - P650</string>
    <string name="shielasroom2">\t • (2) 1 Matrimonial (2 single) - P750</string>
    <string name="shielasroom3">\t • 1 Matrimonial Bed - P650</string>
    <string name="shielasroom4">\t • Single Bed w/o TV - P450</string>
    <string name="shielasroom5">\t • Single Bed 2 Separate CR - P450</string>
    <string name="shielasroom6">\t • 2 Matrimonial w/ Separate CR - P650</string>
    <string name="shielasroom7">\t • Apartelle 1 Matrimonial 1 Single Bed - P 1,300</string>
    <string name="shielasroom8">\t • Apartelle Twin Bed - P1,100</string>
    <string name="shielasroom9">\t • 10 Non - Aircon Rooms (Common CR) good for two - P250 </string>
    <string name="shielasroom10">\t • Excess Time - P100/Hour (aircon) </string>
    <string name="shielasroom11">\t • Excess Time - P10/Hour (non - aircon) </string>
    <string name="shielasroom12">\t • Extra Person - P100 </string>
    <string name="shielasroom13">\t • Extra bed - P100</string>
    <string name="shielasnum1">\t • Tel #: (086) 853 – 1510</string>
    <string name="sleepsub">R.B. Castillo Street, Mangagoy, Bislig City</string>
    <string name="sleepbtn">Map to Sleep Inn</string>
    <string name="sleeproom1">\t • 1 Double Beds w/ common toilet and bath  - P400</string>
    <string name="sleeproom2">\t • 1 Triple Bed w/ Toilet and Bath  - P750</string>
    <string name="sleeproom3">\t • 1 Matrimonial Bed w/ TV, toilet and bath  - P700</string>
    <string name="sleeproom4">\t • 6 Single Beds - P150</string>
    <string name="sleeproom5">\t • 1 Double Beds  - P300</string>
    <string name="sleeproom6">\t • 1 Triple Beds - P400</string>
    <string name="sleeproom7">\t • 1 Quad Bed - P500</string>
    <string name="sleepnum">\t • Cel #: 09283366588</string>
    <string name="guide">Swipe the Image Above for More</string>
</resources>